[UPDATE] Day 11 & Day 12

--- a/boot-camp/practice/February/day11/html/xmlhttprequest.html
+++ b/boot-camp/practice/February/day11/html/xmlhttprequest.html
@@ -36,7 +36,7 @@
             if (xhr.status === 200) {
               const res = JSON.parse(xhr.response);
               // console.log(res);
-              return resolve(res);
+              resolve(res);
             } else {
               console.log(xhr.status, xhr.statusText);
               reject(xhr.status);
