[UPDATE] Day 01 ~ Day 10

--- a/boot-camp/practice/January/day08/for-in.html
+++ b/boot-camp/practice/January/day08/for-in.html
@@ -25,7 +25,7 @@
       };
 
       // const person = getPerson();
-      // 특정 함수 호출하고 그 함수 서버로부터 사용자 정보 가져옴
+      // 특정 함수 호출하고 서버로부터 사용자 정보 가져옴
       for (const key in person) {
         console.log(key, person[key]);
       }
