--- a/boot-camp/practice/January/day04/html/13.html
+++ b/boot-camp/practice/January/day04/html/13.html
@@ -10,18 +10,18 @@
     <fieldset>
       <legend>개인정보</legend>
       <label for="username">이름</label>
-      <input type="text" name="" id="" />
+      <input type="text" name="" id="username" />
       <br />
       <label for="tel">연락처</label>
-      <input type="tel" name="" id="" />
+      <input type="tel" name="" id="tel" />
     </fieldset>
     <fieldset>
       <legend>학력정보</legend>
       <label for="education">학력</label>
       <select name="" id="education">
-        <option value="">고졸</option>
-        <option value="">대졸</option>
-        <option value="">대학원졸</option>
+        <option value="고졸">고졸</option>
+        <option value="대졸">대졸</option>
+        <option value="대학원졸">대학원졸</option>
       </select>
     </fieldset>
   </body>
