--- a/boot-camp/practice/January/day10/arrow_function.html
+++ b/boot-camp/practice/January/day10/arrow_function.html
@@ -26,11 +26,7 @@
         return 'Hello ' + name;
       };
 
-      const hello4 = (name) => {
-        'Hello ' + name;
-      };
-
-      
+      const hello4 = (name) => 'Hello ' + name;
     </script>
   </body>
 </html>
